fixed year text clipping and added bg image

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+body {
+  background-image: url("images/bg3.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  /* make the background image 50% opaque */
+  opacity: 0.8;
+}
+
 .chart-container {
   width: 100vw;
   height: 100vh;
@@ -9,7 +18,7 @@
   display: flex;
   justify-content: center;
   margin: auto;
-  max-height: 150px;
+  height: 120px;
   border: 1px solid black;
   padding: 2em;
 }
